--- a/invoice.css
+++ b/invoice.css
@@ -22,6 +22,7 @@ body {
   width: 65px;
   height: auto;
   flex-shrink: 0;
+  padding:10px 0px 0px 20px;
 }
 
 .textHeader {
@@ -41,6 +42,7 @@ body {
   width: 120px;
   height: auto;
   flex-shrink: 0;
+  padding:10px 20px 0px 0px;
 }
 
 .header {
